--- a/index.html
+++ b/index.html
@@ -1,356 +1,248 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Aprenda Inglês com Séries, Músicas e Filmes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Mentoria de Aprendizado de Idiomas</title>
+  <link rel="stylesheet" href="style.css">
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
+        *,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: linear-gradient(180deg, #0f172a 0%, #1e293b 100%);
-            color: #e2e8f0;
-            line-height: 1.7;
-            overflow-x: hidden;
-        }
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    sans-serif;
+  background-color: #050505;
+  color: #f5f5f5;
+}
 
-        .wrapper {
-            max-width: 1100px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
+.page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
-        /* Header & Hero */
-        header {
-            background: linear-gradient(135deg, #7c3aed 0%, #6366f1 50%, #4f46e5 100%);
-            position: relative;
-            overflow: hidden;
-            padding: 5rem 2rem 6rem;
-        }
+/* HERO */
 
-        header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: radial-gradient(circle at 20% 50%, rgba(124, 58, 237, 0.4) 0%, transparent 50%),
-                        radial-gradient(circle at 80% 80%, rgba(99, 102, 241, 0.4) 0%, transparent 50%);
-            pointer-events: none;
-        }
+.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 8vw 40px;
+  gap: 40px;
+}
 
-        header .wrapper {
-            position: relative;
-            z-index: 1;
-            text-align: center;
-            max-width: 800px;
-        }
+.hero-content {
+  max-width: 480px;
+}
 
-        .hero-title {
-            font-size: 3.5rem;
-            font-weight: 800;
-            color: #ffffff;
-            margin-bottom: 1.5rem;
-            letter-spacing: -0.02em;
-            line-height: 1.15;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+.hero-title {
+  font-size: 40px;
+  line-height: 1.1;
+  letter-spacing: 0.04em;
+  font-weight: 700;
+  margin-bottom: 24px;
+}
 
-        .hero-subtitle {
-            font-size: 1.35rem;
-            color: #c7d2fe;
-            max-width: 680px;
-            margin: 0 auto;
-            font-weight: 400;
-            line-height: 1.6;
-        }
+.hero-subtitle {
+  font-size: 18px;
+  line-height: 1.5;
+  color: #d0d0d0;
+  margin-bottom: 32px;
+}
 
-        /* Main Content */
-        main {
-            padding: 4rem 0 5rem;
-        }
+.hero-image img {
+  display: block;
+  max-width: 340px;
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+}
 
-        section {
-            margin-bottom: 2rem;
-            background: rgba(30, 41, 59, 0.6);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 3rem 2.5rem;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3),
-                        0 10px 30px rgba(0, 0, 0, 0.2);
-            border: 1px solid rgba(71, 85, 105, 0.3);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
+/* BUTTONS */
 
-        section:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4),
-                        0 20px 50px rgba(124, 58, 237, 0.3);
-            border-color: rgba(124, 58, 237, 0.4);
-        }
+.btn-primary {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 14px 38px;
+  border-radius: 8px;
+  background-color: #f3c88f;
+  color: #111;
+  font-weight: 600;
+  font-size: 16px;
+  text-decoration: none;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  transition: transform 0.15s ease, box-shadow 0.15s ease,
+    background-color 0.15s ease;
+}
 
-        section h2 {
-            font-size: 2rem;
-            font-weight: 700;
-            color: #f1f5f9;
-            margin-bottom: 1.5rem;
-            position: relative;
-            display: inline-block;
-            letter-spacing: -0.01em;
-        }
+.btn-primary:hover {
+  background-color: #e6b777;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.35);
+  transform: translateY(-1px);
+}
 
-        section h2::after {
-            content: '';
-            position: absolute;
-            bottom: -8px;
-            left: 0;
-            width: 50px;
-            height: 4px;
-            background: linear-gradient(90deg, #a78bfa, #c084fc);
-            border-radius: 2px;
-        }
+.btn-large {
+  padding-inline: 60px;
+}
 
-        .section-text-block {
-            margin-bottom: 1rem;
-            font-size: 1.05rem;
-            color: #cbd5e1;
-            line-height: 1.8;
-        }
+/* COMO FUNCIONA */
 
-        section p {
-            margin-bottom: 1rem;
-            font-size: 1.05rem;
-            color: #cbd5e1;
-            line-height: 1.8;
-        }
+.steps {
+  text-align: center;
+  padding: 40px 8vw 70px;
+}
 
-        ul {
-            list-style: none;
-            padding: 0;
-            margin-top: 1.5rem;
-        }
+.section-title {
+  font-size: 26px;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  margin-bottom: 36px;
+}
 
-        li {
-            margin-bottom: 1rem;
-            padding-left: 2rem;
-            position: relative;
-            font-size: 1.05rem;
-            color: #cbd5e1;
-            line-height: 1.7;
-        }
+.steps-grid {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  margin-bottom: 40px;
+  flex-wrap: wrap;
+}
 
-        li::before {
-            content: '✓';
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 24px;
-            height: 24px;
-            background: linear-gradient(135deg, #7c3aed, #a78bfa);
-            color: #ffffff;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            font-size: 0.75rem;
-        }
+.step {
+  min-width: 180px;
+}
 
-        /* CTA Section */
-        .cta-section {
-            text-align: center;
-            background: linear-gradient(135deg, rgba(124, 58, 237, 0.2) 0%, rgba(99, 102, 241, 0.2) 100%);
-            border: 2px solid rgba(124, 58, 237, 0.4);
-            padding: 3.5rem 2.5rem;
-        }
+.step-number {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
 
-        .cta-section h2::after {
-            left: 50%;
-            transform: translateX(-50%);
-        }
+.step-title {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
 
-        .cta-section p {
-            font-size: 1.15rem;
-            color: #cbd5e1;
-            margin-bottom: 0.75rem;
-        }
+.step-text {
+  font-size: 15px;
+  line-height: 1.5;
+  color: #d0d0d0;
+}
 
-        .cta-button {
-            display: inline-block;
-            margin-top: 1.5rem;
-            padding: 1.1rem 3rem;
-            font-size: 1.1rem;
-            font-weight: 600;
-            text-decoration: none;
-            border-radius: 12px;
-            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
-            color: #ffffff;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 4px 14px rgba(16, 185, 129, 0.4),
-                        0 10px 30px rgba(16, 185, 129, 0.2);
-            border: none;
-            letter-spacing: 0.01em;
-        }
+.cta-text {
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 22px;
+}
 
-        .cta-button:hover {
-            background: linear-gradient(135deg, #059669 0%, #047857 100%);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(16, 185, 129, 0.5),
-                        0 15px 40px rgba(16, 185, 129, 0.3);
-        }
+/* RESPONSIVO */
 
-        .cta-button:active {
-            transform: translateY(0);
-            box-shadow: 0 2px 8px rgba(16, 185, 129, 0.4);
-        }
+@media (max-width: 900px) {
+  .hero {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
 
-        /* Footer */
-        footer {
-            text-align: center;
-            padding: 3rem 2rem;
-            font-size: 0.9rem;
-            color: #64748b;
-            background: transparent;
-        }
+  .hero-content {
+    align-items: center;
+  }
 
-        /* Responsive */
-        @media (max-width: 768px) {
-            header {
-                padding: 3.5rem 1.5rem 4.5rem;
-            }
+  .hero-title {
+    font-size: 34px;
+  }
+}
 
-            .hero-title {
-                font-size: 2.5rem;
-            }
+@media (max-width: 600px) {
+  .hero {
+    padding-inline: 6vw;
+  }
 
-            .hero-subtitle {
-                font-size: 1.15rem;
-            }
+  .steps {
+    padding-inline: 6vw;
+  }
 
-            section {
-                padding: 2.25rem 1.75rem;
-                margin-bottom: 1.5rem;
-            }
+  .hero-title {
+    font-size: 30px;
+  }
 
-            section h2 {
-                font-size: 1.65rem;
-            }
+  .hero-subtitle {
+    font-size: 16px;
+  }
+}
 
-            .cta-section {
-                padding: 2.5rem 1.75rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .wrapper {
-                padding: 0 1.25rem;
-            }
-
-            .hero-title {
-                font-size: 2rem;
-            }
-
-            .hero-subtitle {
-                font-size: 1rem;
-            }
-
-            section {
-                padding: 1.75rem 1.5rem;
-                border-radius: 16px;
-            }
-
-            section h2 {
-                font-size: 1.5rem;
-            }
-
-            .section-text-block,
-            section p,
-            li {
-                font-size: 1rem;
-            }
-
-            .cta-button {
-                width: 100%;
-                padding: 1rem 2rem;
-            }
-        }
     </style>
 </head>
 <body>
-    <header>
-        <div class="wrapper">
-            <h1 class="hero-title">Aprenda Inglês de Forma Natural e Leve</h1>
-            <p class="hero-subtitle">
-                Destrave seu inglês com séries, músicas e filmes — do jeito que você gosta, no seu ritmo.
-            </p>
+  <main class="page">
+
+    <!-- HERO -->
+    <section class="hero">
+      <div class="hero-content">
+        <h1 class="hero-title">
+          MENTORIA DE<br>
+          APRENDIZADO<br>
+          DE IDIOMAS
+        </h1>
+
+        <p class="hero-subtitle">
+          Um método comprovado para<br>
+          adquirir um novo idioma ao<br>
+          longo de meses
+        </p>
+
+        <a href="#" class="btn-primary">COMECE AGORA</a>
+      </div>
+
+      <div class="hero-image">
+        <!-- Troque "pessoa.png" pela sua imagem -->
+        <img src="pessoa.png" alt="Mentor sorrindo">
+      </div>
+    </section>
+
+    <!-- COMO FUNCIONA -->
+    <section class="steps">
+      <h2 class="section-title">COMO FUNCIONA</h2>
+
+      <div class="steps-grid">
+        <div class="step">
+          <div class="step-number">1</div>
+          <h3 class="step-title">Acesse o conteúdo</h3>
+          <p class="step-text">
+            Entre na plataforma<br>
+            com seu login e senha
+          </p>
         </div>
-    </header>
 
-    <main>
-        <div class="wrapper">
-            <section>
-                <h2>Como funciona a mentoria</h2>
-                <p class="section-text-block">
-                    Chega de métodos cansativos. Aqui, você aprende com conteúdo real que te interessa: séries, músicas, filmes, vídeos e podcasts — tudo adaptado ao seu nível.
-                </p>
-                <p class="section-text-block">
-                    Te mostro como escolher os materiais certos e como usá-los para aprender naturalmente, sem se forçar a decorar regras.
-                </p>
-                <p class="section-text-block">
-                    Também ensinamos como usar IA, como o ChatGPT, para praticar conversas, revisar vocabulário e tirar dúvidas sempre que quiser.
-                </p>
-                <p class="section-text-block">
-                    As sessões são focadas em compreensão e expressão autêntica — você entende e se comunica com mais segurança.
-                </p>
-                <p>
-                    Tudo de forma leve, contínua e sem pressão. Inglês com prazer e propósito.
-                </p>
-            </section>
-
-            <section>
-                <h2>Essa mentoria é ideal para você se:</h2>
-                <ul>
-                    <li>Já tentou cursos tradicionais e não conseguiu evoluir.</li>
-                    <li>Gosta de aprender com conteúdos audiovisuais e música.</li>
-                    <li>Prefere uma abordagem mais leve, sem pressão.</li>
-                    <li>Quer usar IA para potencializar o aprendizado diário.</li>
-                    <li>Deseja entender o inglês real, falado no dia a dia.</li>
-                </ul>
-            </section>
-
-            <section>
-                <h2>O que você vai conquistar</h2>
-                <ul>
-                    <li>Mais fluência ouvindo e falando inglês de forma natural.</li>
-                    <li>Acompanhamento próximo, ajustado à sua realidade.</li>
-                    <li>Recomendações certeiras para você nunca se sentir perdido.</li>
-                    <li>Autonomia para estudar com IA mesmo nos dias mais corridos.</li>
-                    <li>Segurança para se comunicar com confiança, sem medo de errar.</li>
-                </ul>
-            </section>
-
-            <section class="cta-section">
-                <h2>Vamos conversar?</h2>
-                <p>Quer descobrir se essa mentoria é ideal para você?</p>
-                <p>Clique abaixo e fale comigo diretamente no WhatsApp.</p>
-                <a class="cta-button" href="https://wa.me/5599999999999" target="_blank" rel="noopener noreferrer">
-                    Falar no WhatsApp
-                </a>
-            </section>
+        <div class="step">
+          <div class="step-number">2</div>
+          <h3 class="step-title">Siga o método</h3>
+          <p class="step-text">
+            Pratique as lições<br>
+            e exercícios propostos
+          </p>
         </div>
-    </main>
 
-    <footer>
-        © 2025 Mentoria de Inglês com Conteúdo Real. Todos os direitos reservados.
-    </footer>
+        <div class="step">
+          <div class="step-number">3</div>
+          <h3 class="step-title">Adquira o idioma</h3>
+          <p class="step-text">
+            Fale seu novo idioma<br>
+            de forma natural
+          </p>
+        </div>
+      </div>
+
+      <p class="cta-text">Pronto para falar um novo idioma?</p>
+
+      <a href="#" class="btn-primary btn-large">COMECE AGORA</a>
+    </section>
+
+  </main>
 </body>
 </html>
