--- a/index.html
+++ b/index.html
@@ -212,19 +212,17 @@ body {
       <div class="steps-grid">
         <div class="step">
           <div class="step-number">1</div>
-          <h3 class="step-title">Acesse o conteúdo</h3>
+          <h3 class="step-title">Converse diretamente comigo</h3>
           <p class="step-text">
-            Entre na plataforma<br>
-            com seu login e senha
+            Entre em chamadas ao vivo
           </p>
         </div>
 
         <div class="step">
           <div class="step-number">2</div>
-          <h3 class="step-title">Siga o método</h3>
+          <h3 class="step-title">Personalize o método</h3>
           <p class="step-text">
-            Pratique as lições<br>
-            e exercícios propostos
+            Alinharemos em conjunto</br> seu caminho a fluência
           </p>
         </div>
 
