Update steps section with new content

--- a/index.html
+++ b/index.html
@@ -206,36 +206,40 @@ body {
     </section>
 
     <!-- COMO FUNCIONA -->
-    <section class="steps">
-      <h2 class="section-title">COMO FUNCIONA</h2>
+  <section class="steps">
+  <h2 class="section-title">COMO FUNCIONA</h2>
 
-      <div class="steps-grid">
-        <div class="step">
-          <div class="step-number">1</div>
-          <h3 class="step-title">Converse diretamente comigo</h3>
-          <p class="step-text">
-            Entre em chamadas ao vivo
-          </p>
-        </div>
+  <div class="steps-grid">
 
-        <div class="step">
-          <div class="step-number">2</div>
-          <h3 class="step-title">Personalize o método</h3>
-          <p class="step-text">
-            Alinharemos em conjunto</br> seu caminho a fluência
-          </p>
-        </div>
+    <div class="step">
+      <div class="step-number">1</div>
+      <h3 class="step-title">Aprenda com o que gosta</h3>
+      <p class="step-text">
+        Séries, músicas, filmes, vídeos e podcasts —<br>
+        tudo real e adaptado ao seu nível.
+      </p>
+    </div>
 
-        <div class="step">
-          <div class="step-number">3</div>
-          <h3 class="step-title">Adquira o idioma</h3>
-          <p class="step-text">
-            Fale seu novo idioma<br>
-            de forma natural
-          </p>
-        </div>
-      </div>
+    <div class="step">
+      <div class="step-number">2</div>
+      <h3 class="step-title">Use o método certo para você</h3>
+      <p class="step-text">
+        Te mostro como escolher os melhores materiais<br>
+        e aprender naturalmente, sem decoreba.
+      </p>
+    </div>
 
+    <div class="step">
+      <div class="step-number">3</div>
+      <h3 class="step-title">Pratique com IA e evolua</h3>
+      <p class="step-text">
+        Converse, revise vocabulário e tire dúvidas<br>
+        usando IA — no seu ritmo e sem pressão.
+      </p>
+    </div>
+
+  </div>
+</section>
       <p class="cta-text">Pronto para falar um novo idioma?</p>
 
       <a href="#" class="btn-primary btn-large">COMECE AGORA</a>
