Simplify hero subtitle text in index.html
Removed redundant text from the hero subtitle.

--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@ body {
 
         <p class="hero-subtitle">
           Um método comprovado para<br>
-          adquirir um novo idioma ao<br>
-          longo de meses
+          adquirir um novo idioma
         </p>
 
         <a href="#" class="btn-primary">COMECE AGORA</a>
