Add gap property to button styling

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ body {
   justify-content: center;
   padding: 14px 38px;
   border-radius: 8px;
+  gap: 5px;
   background-color: #f3c88f;
   color: #111;
   font-weight: 600;
