--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body {
 
       <div class="hero-image">
         <!-- Troque "pessoa.png" pela sua imagem -->
-        <img src="pessoa.png" alt="Mentor sorrindo">
+        <img src="foto.png" alt="Mentor sorrindo">
       </div>
     </section>
 
