Update hero section layout and enhance mentor image styling

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ body {
 
 .hero {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 60px 8vw 40px;
-  gap: 40px;
+  gap: 15rem;
 }
 
 .hero-content {
@@ -204,7 +204,7 @@ body {
 
       <div class="hero-image">
         <!-- Troque "pessoa.png" pela sua imagem -->
-        <img src="foto.png" alt="Mentor sorrindo">
+        <img src="foto.png" class="mentor-img" alt="Mentor sorrindo">
       </div>
     </section>
 
