--- a/index.html
+++ b/index.html
@@ -102,14 +102,35 @@
       background: linear-gradient(to right, transparent, #e5e7eb, transparent);
     }
 
-    .cta-block {
+  .cta-block {
       margin-top: 2rem;
       padding-top: 1rem;
       border-top: 1px solid #e5e7eb;
+      text-align: center;
     }
 
-    .cta-text {
+    .cta-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.9rem 1.4rem;
+      background-color: #25d366;
+      color: white;
+      text-decoration: none;
       font-weight: 600;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      transition: background-color 0.2s ease;
+    }
+
+    .cta-btn:hover {
+      background-color: #1ebe5d;
+    }
+
+    .cta-btn svg {
+      width: 22px;
+      height: 22px;
+      fill: white;
     }
 
     @media (max-width: 600px) {
