--- a/index.html
+++ b/index.html
@@ -5,151 +5,163 @@
   <title>Mentoria de Inglês – Método Natural</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    :root {
-      font-size: 16px;
-    }
+  :root {
+  font-size: 16px;
+}
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-      line-height: 1.6;
-      color: #111827;
-      background-color: #f9fafb;
-    }
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    sans-serif;
+  line-height: 1.6;
+  color: #e5e7eb;
+  background-color: #0f172a; /* fundo escuro */
+}
 
-    .page {
-      min-height: 100vh;
-      padding: 1.5rem 1rem 3rem;
-    }
+.page {
+  min-height: 100vh;
+  padding: 1.5rem 1rem 3rem;
+}
 
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background: #ffffff;
-      padding: 2rem 1.5rem;
-      border-radius: 0.75rem;
-      box-shadow: 0 10px 30px rgba(15, 23, 42, 0.08);
-    }
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  background: #1e293b; /* caixa escura */
+  padding: 2rem 1.5rem;
+  border-radius: 0.75rem;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); /* sombra mais pesada */
+}
 
-    header {
-      margin-bottom: 2rem;
-    }
+header {
+  margin-bottom: 2rem;
+}
 
-    header h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-      font-weight: 700;
-      letter-spacing: -0.03em;
-    }
+header h1 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  letter-spacing: -0.03em;
+  color: #f8fafc;
+}
 
-    header p {
-      color: #6b7280;
-      font-size: 0.95rem;
-    }
+header p {
+  color: #9ca3af;
+  font-size: 0.95rem;
+}
 
-    h2 {
-      font-size: 1.3rem;
-      margin: 2rem 0 0.75rem;
-      font-weight: 700;
-    }
+h2 {
+  font-size: 1.3rem;
+  margin: 2rem 0 0.75rem;
+  font-weight: 700;
+  color: #f1f5f9;
+}
 
-    h3 {
-      font-size: 1.05rem;
-      margin: 1.25rem 0 0.5rem;
-      font-weight: 600;
-    }
+h3 {
+  font-size: 1.05rem;
+  margin: 1.25rem 0 0.5rem;
+  font-weight: 600;
+  color: #e2e8f0;
+}
 
-    p {
-      margin-bottom: 0.9rem;
-      font-size: 0.98rem;
-    }
+p {
+  margin-bottom: 0.9rem;
+  font-size: 0.98rem;
+  color: #cbd5e1;
+}
 
-    ul {
-      margin: 0.25rem 0 1rem 1.25rem;
-      padding-left: 0.25rem;
-    }
+ul {
+  margin: 0.25rem 0 1rem 1.25rem;
+  padding-left: 0.25rem;
+}
 
-    li {
-      margin-bottom: 0.35rem;
-      font-size: 0.96rem;
-    }
+li {
+  margin-bottom: 0.35rem;
+  font-size: 0.96rem;
+  color: #cbd5e1;
+}
 
-    .highlight {
-      font-weight: 600;
-    }
+.highlight {
+  font-weight: 600;
+  color: #f1f5f9;
+}
 
-    .underline {
-      text-decoration: underline;
-    }
+.underline {
+  text-decoration: underline;
+}
 
-    .tagline {
-      font-size: 0.9rem;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      color: #9ca3af;
-      margin-bottom: 0.5rem;
-    }
+.tagline {
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: 0.12em;
+  color: #64748b;
+  margin-bottom: 0.5rem;
+}
 
-    .divider {
-      margin: 1.75rem 0;
-      height: 1px;
-      background: linear-gradient(to right, transparent, #e5e7eb, transparent);
-    }
+.divider {
+  margin: 1.75rem 0;
+  height: 1px;
+  background: linear-gradient(
+    to right,
+    transparent,
+    #334155,
+    transparent
+  );
+}
 
-    .cta-block {
-      margin-top: 2rem;
-      padding-top: 1rem;
-      border-top: 1px solid #e5e7eb;
-      text-align: center;
-    }
+.cta-block {
+  margin-top: 2rem;
+  padding-top: 1rem;
+  border-top: 1px solid #334155;
+  text-align: center;
+}
 
-    .cta-btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.9rem 1.4rem;
-      background-color: #25d366;
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      transition: background-color 0.2s ease;
-    }
+.cta-btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.9rem 1.4rem;
+  background-color: #25d366;
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  transition: background-color 0.2s ease;
+}
 
-    .cta-btn:hover {
-      background-color: #1ebe5d;
-    }
+.cta-btn:hover {
+  background-color: #1ebe5d;
+}
 
-    .cta-btn svg {
-      width: 22px;
-      height: 22px;
-      fill: white;
-    }
+.cta-btn svg {
+  width: 22px;
+  height: 22px;
+  fill: white;
+}
 
-    @media (max-width: 600px) {
-      .container {
-        padding: 1.5rem 1.1rem;
-      }
+@media (max-width: 600px) {
+  .container {
+    padding: 1.5rem 1.1rem;
+  }
 
-      header h1 {
-        font-size: 1.6rem;
-      }
+  header h1 {
+    font-size: 1.6rem;
+  }
 
-      h2 {
-        font-size: 1.15rem;
-      }
+  h2 {
+    font-size: 1.15rem;
+  }
 
-      body {
-        background-color: #ffffff;
-      }
-    }
+  body {
+    background-color: #0f172a;
+  }
+}
+
   </style>
 </head>
 <body>
