Add Vercel insights script to index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ li {
     background-color: #0f172a;
   }
 }
-
+<script defer src="/_vercel/insights/script.js"></script>
   </style>
 </head>
 <body>
