Add Vercel insights script to index.html

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@ li {
   }
 }
 <script defer src="/_vercel/insights/script.js"></script>
+    <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
   </style>
 </head>
 <body>
