Refactor HTML and CSS for improved structure

--- a/index.html
+++ b/index.html
@@ -6,225 +6,264 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
   :root {
-  font-size: 16px;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    sans-serif;
-  line-height: 1.6;
-  color: #e5e7eb;
-  background-color: #0f172a; /* fundo escuro */
-}
-
-.page {
-  min-height: 100vh;
-  padding: 1.5rem 1rem 3rem;
-}
-
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  background: #1e293b; /* caixa escura */
-  padding: 2rem 1.5rem;
-  border-radius: 0.75rem;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); /* sombra mais pesada */
-}
-
-header {
-  margin-bottom: 2rem;
-}
-
-header h1 {
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-  font-weight: 700;
-  letter-spacing: -0.03em;
-  color: #f8fafc;
-}
-
-header p {
-  color: #9ca3af;
-  font-size: 0.95rem;
-}
-
-h2 {
-  font-size: 1.3rem;
-  margin: 2rem 0 0.75rem;
-  font-weight: 700;
-  color: #f1f5f9;
-}
-
-h3 {
-  font-size: 1.05rem;
-  margin: 1.25rem 0 0.5rem;
-  font-weight: 600;
-  color: #e2e8f0;
-}
-
-p {
-  margin-bottom: 0.9rem;
-  font-size: 0.98rem;
-  color: #cbd5e1;
-}
-
-ul {
-  margin: 0.25rem 0 1rem 1.25rem;
-  padding-left: 0.25rem;
-}
-
-li {
-  margin-bottom: 0.35rem;
-  font-size: 0.96rem;
-  color: #cbd5e1;
-}
-
-.highlight {
-  font-weight: 600;
-  color: #f1f5f9;
-}
-
-.underline {
-  text-decoration: underline;
-}
-
-.tagline {
-  font-size: 0.9rem;
-  text-transform: uppercase;
-  letter-spacing: 0.12em;
-  color: #64748b;
-  margin-bottom: 0.5rem;
-}
-
-.divider {
-  margin: 1.75rem 0;
-  height: 1px;
-  background: linear-gradient(
-    to right,
-    transparent,
-    #334155,
-    transparent
-  );
-}
-
-.cta-block {
-  margin-top: 2rem;
-  padding-top: 1rem;
-  border-top: 1px solid #334155;
-  text-align: center;
-}
-
-.cta-btn {
-  display: inline-flex;
-  align-items: center;
-  gap: 0.5rem;
-  padding: 0.9rem 1.4rem;
-  background-color: #25d366;
-  color: white;
-  text-decoration: none;
-  font-weight: 600;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  transition: background-color 0.2s ease;
-}
-
-.cta-btn:hover {
-  background-color: #1ebe5d;
-}
-
-.cta-btn svg {
-  width: 22px;
-  height: 22px;
-  fill: white;
-}
-
-    .newsletter-form {
-  margin-top: 1.8rem;
-  text-align: center;
-}
-
-.newsletter-form label {
-  display: block;
-  margin-bottom: 0.75rem;
-  font-size: 0.95rem;
-  color: #cbd5e1;
-}
-
-.newsletter-fields {
-  display: flex;
-  gap: 0.6rem;
-  justify-content: center;
-}
-
-.newsletter-fields input {
-  padding: 0.75rem 1rem;
-  border-radius: 0.5rem;
-  border: 1px solid #334155;
-  background: #0f172a;
-  color: #e2e8f0;
-  width: 60%;
-  max-width: 260px;
-}
-
-.newsletter-fields input::placeholder {
-  color: #64748b;
-}
-
-.newsletter-fields button {
-  padding: 0.75rem 1.2rem;
-  border-radius: 0.5rem;
-  background-color: #3b82f6;
-  color: white;
-  font-weight: 600;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
-
-.newsletter-fields button:hover {
-  background-color: #2563eb;
-}
-
-@media (max-width: 600px) {
-  .newsletter-fields {
-    flex-direction: column;
-  }
-  .newsletter-fields input,
-  .newsletter-fields button {
-    width: 100%;
-  }
-}
-
-
-@media (max-width: 600px) {
-  .container {
-    padding: 1.5rem 1.1rem;
+    font-size: 16px;
   }
 
-  header h1 {
-    font-size: 1.6rem;
-  }
-
-  h2 {
-    font-size: 1.15rem;
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
   body {
-    background-color: #0f172a;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      sans-serif;
+    line-height: 1.6;
+    color: #e5e7eb;
+    background-color: #0f172a; /* fundo escuro */
   }
-}
 
+  .page {
+    min-height: 100vh;
+    padding: 1.5rem 1rem 3rem;
+  }
+
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+    background: #1e293b; /* caixa escura */
+    padding: 2rem 1.5rem;
+    border-radius: 0.75rem;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); /* sombra mais pesada */
+  }
+
+  header {
+    margin-bottom: 2rem;
+  }
+
+  header h1 {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+    font-weight: 700;
+    letter-spacing: -0.03em;
+    color: #f8fafc;
+  }
+
+  header p {
+    color: #9ca3af;
+    font-size: 0.95rem;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+    margin: 2rem 0 0.75rem;
+    font-weight: 700;
+    color: #f1f5f9;
+  }
+
+  h3 {
+    font-size: 1.05rem;
+    margin: 1.25rem 0 0.5rem;
+    font-weight: 600;
+    color: #e2e8f0;
+  }
+
+  p {
+    margin-bottom: 0.9rem;
+    font-size: 0.98rem;
+    color: #cbd5e1;
+  }
+
+  ul {
+    margin: 0.25rem 0 1rem 1.25rem;
+    padding-left: 0.25rem;
+  }
+
+  li {
+    margin-bottom: 0.35rem;
+    font-size: 0.96rem;
+    color: #cbd5e1;
+  }
+
+  .highlight {
+    font-weight: 600;
+    color: #f1f5f9;
+  }
+
+  .underline {
+    text-decoration: underline;
+  }
+
+  .tagline {
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    letter-spacing: 0.12em;
+    color: #64748b;
+    margin-bottom: 0.5rem;
+  }
+
+  .divider {
+    margin: 1.75rem 0;
+    height: 1px;
+    background: linear-gradient(
+      to right,
+      transparent,
+      #334155,
+      transparent
+    );
+  }
+
+  .cta-block {
+    margin-top: 2rem;
+    padding-top: 1rem;
+    border-top: 1px solid #334155;
+    text-align: center;
+  }
+
+  .cta-btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.9rem 1.4rem;
+    background-color: #25d366;
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    transition: background-color 0.2s ease;
+  }
+
+  .cta-btn:hover {
+    background-color: #1ebe5d;
+  }
+
+  .cta-btn svg {
+    width: 22px;
+    height: 22px;
+    fill: white;
+  }
+
+  /* Newsletter */
+
+  .newsletter-form {
+    margin-top: 1.8rem;
+    text-align: center;
+  }
+
+  .newsletter-form label {
+    display: block;
+    margin-bottom: 0.75rem;
+    font-size: 0.95rem;
+    color: #cbd5e1;
+  }
+
+  .newsletter-fields {
+    display: flex;
+    gap: 0.6rem;
+    justify-content: center;
+  }
+
+  .newsletter-fields input {
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid #334155;
+    background: #0f172a;
+    color: #e2e8f0;
+    width: 60%;
+    max-width: 260px;
+  }
+
+  .newsletter-fields input::placeholder {
+    color: #64748b;
+  }
+
+  .newsletter-fields button {
+    padding: 0.75rem 1.2rem;
+    border-radius: 0.5rem;
+    background-color: #3b82f6;
+    color: white;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease, opacity 0.2s ease;
+  }
+
+  .newsletter-fields button:hover {
+    background-color: #2563eb;
+  }
+
+  .newsletter-form.is-sending .newsletter-fields button {
+    opacity: 0.7;
+    pointer-events: none;
+  }
+
+  .newsletter-status {
+    margin-top: 0.8rem;
+    min-height: 1.5rem;
+  }
+
+  .status-message {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.4rem;
+    font-size: 0.9rem;
+  }
+
+  .status-message svg {
+    width: 18px;
+    height: 18px;
+  }
+
+  .status-message.success span {
+    color: #22c55e;
+  }
+
+  .status-message.success svg {
+    fill: #22c55e;
+  }
+
+  .status-message.error span {
+    color: #f97373;
+  }
+
+  .status-message.error svg {
+    fill: #f97373;
+  }
+
+  @media (max-width: 600px) {
+    .newsletter-fields {
+      flex-direction: column;
+    }
+    .newsletter-fields input,
+    .newsletter-fields button {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 600px) {
+    .container {
+      padding: 1.5rem 1.1rem;
+    }
+
+    header h1 {
+      font-size: 1.6rem;
+    }
+
+    h2 {
+      font-size: 1.15rem;
+    }
+
+    body {
+      background-color: #0f172a;
+    }
+  }
   </style>
+
   <script defer src="/_vercel/insights/script.js"></script>
-    <script>
-  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-</script>
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
 </head>
 <body>
   <div class="page">
@@ -431,30 +470,87 @@ li {
             </svg>
             Falar pelo WhatsApp
           </a>
+
+          <!-- Formulário de newsletter logo abaixo do botão do WhatsApp -->
+          <form class="newsletter-form" id="newsletter-form">
+            <label for="email">Entre com seu e-mail para receber meus conteúdos sobre aquisição de línguas:</label>
+            <div class="newsletter-fields">
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Digite seu e-mail"
+                required
+              />
+              <button type="submit">Inscrever</button>
+            </div>
+          </form>
+
+          <div class="newsletter-status" id="newsletter-status" aria-live="polite"></div>
         </section>
 
       </section>
-
-      <form class="newsletter-form" method="POST" action="https://script.google.com/macros/s/AKfycbw2Ywa7zmeC6eMew7zNloeXKcor2K7PiX1MuBI1sIi_t_SeamFPA5Hv1NvYK-UgsMU/exec">
-  <label for="email">Entre para receber meus conteúdos sobre aquisição natural:</label>
-  <div class="newsletter-fields">
-    <input
-      type="email"
-      id="email"
-      name="email"
-      placeholder="Digite seu e-mail"
-      required
-    />
-    <button type="submit">Inscrever</button>
-  </div>
-</form>
-
 
     </div>
   </div>
 
   <script>
-    // JS vazio de propósito.
+    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbw2Ywa7zmeC6eMew7zNloeXKcor2K7PiX1MuBI1sIi_t_SeamFPA5Hv1NvYK-UgsMU/exec';
+
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('newsletter-form');
+      const emailInput = document.getElementById('email');
+      const statusEl = document.getElementById('newsletter-status');
+
+      if (!form) return;
+
+      form.addEventListener('submit', function (event) {
+        event.preventDefault(); // impede reload/redirecionamento
+
+        const email = emailInput.value.trim();
+        if (!email) return;
+
+        // estado "enviando"
+        form.classList.add('is-sending');
+        statusEl.innerHTML = '';
+
+        const body = new URLSearchParams({ email }).toString();
+
+        fetch(WEB_APP_URL, {
+          method: 'POST',
+          mode: 'no-cors',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'
+          },
+          body
+        })
+          .then(() => {
+            form.classList.remove('is-sending');
+            emailInput.value = '';
+
+            statusEl.innerHTML = `
+              <div class="status-message success">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"></path>
+                </svg>
+                <span>Pronto! Seu e-mail foi cadastrado.</span>
+              </div>
+            `;
+          })
+          .catch(() => {
+            form.classList.remove('is-sending');
+
+            statusEl.innerHTML = `
+              <div class="status-message error">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M12 2 2 22h20L12 2zm0 14v-4h0v4zm0 4v-2h0v2z"></path>
+                </svg>
+                <span>Ops, algo deu errado. Tente novamente.</span>
+              </div>
+            `;
+          });
+      });
+    });
   </script>
 </body>
 </html>
