Comment out newsletter form in index.html

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           </a>
 
           <!-- Formulário de newsletter logo abaixo do botão do WhatsApp -->
-          <form class="newsletter-form" id="newsletter-form">
+          <!-- <form class="newsletter-form" id="newsletter-form">
             <label for="email">Entre com seu e-mail para receber meus conteúdos sobre aquisição de línguas:</label>
             <div class="newsletter-fields">
               <input
@@ -484,7 +484,7 @@
               />
               <button type="submit">Inscrever</button>
             </div>
-          </form>
+          </form> -->
 
           <div class="newsletter-status" id="newsletter-status" aria-live="polite"></div>
         </section>
