--- a/index.html
+++ b/index.html
@@ -37,15 +37,24 @@
         height: 100%;
       }
 
-      body {
+     body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
         line-height: 1.6;
         color: var(--text);
-        background: radial-gradient(1200px 800px at 10% 0%, rgba(96, 165, 250, 0.18), transparent 55%),
+      
+        /* ✅ background sem repetição / sem corte */
+        background-image:
+          radial-gradient(1200px 800px at 10% 0%, rgba(96, 165, 250, 0.18), transparent 55%),
           radial-gradient(900px 600px at 90% 20%, rgba(34, 197, 94, 0.12), transparent 60%),
           radial-gradient(900px 600px at 50% 120%, rgba(59, 130, 246, 0.14), transparent 60%),
-          var(--bg);
+          linear-gradient(180deg, #0b1224 0%, #070b18 100%);
+      
+        background-repeat: no-repeat;      /* <- importante */
+        background-attachment: fixed;      /* <- “gruda” no viewport */
+        background-size: cover;            /* <- cobre tudo */
+        background-position: center;       /* <- centraliza o layer base */
       }
+
 
       a {
         color: inherit;
