--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       
         background-repeat: no-repeat;      /* <- importante */
         background-attachment: fixed;      /* <- “gruda” no viewport */
-        background-size: cover;            /* <- cobre tudo */
-        background-position: center;       /* <- centraliza o layer base */
+        background-size: 1400px 900px, 1100px 700px, 1100px 700px, cover;
+        background-position: 10% 0%, 90% 20%, 50% 120%, center;
       }
 
 
