Disable newsletter form in index.html
Comment out the newsletter form section in index.html.

--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 
           <!-- Se quiser usar a newsletter, mantenha.
                Se não usar, pode remover este bloco inteiro sem quebrar nada. -->
-          <form class="newsletter-form" id="newsletterForm" novalidate>
+          <!-- <form class="newsletter-form" id="newsletterForm" novalidate>
             <label for="email">
               Quer receber conteúdos curtos sobre aquisição natural? (sem spam)
             </label>
@@ -758,7 +758,7 @@
             </div>
 
             <div class="newsletter-status" id="newsletterStatus" aria-live="polite"></div>
-          </form>
+          </form> -->
         </section>
 
         <footer>
