Simplify background styling in index.html
Removed complex background gradients and set a solid background color.

--- a/index.html
+++ b/index.html
@@ -42,17 +42,8 @@
         line-height: 1.6;
         color: var(--text);
       
-        /* ✅ background sem repetição / sem corte */
-        background-image:
-          radial-gradient(1200px 800px at 10% 0%, rgba(96, 165, 250, 0.18), transparent 55%),
-          radial-gradient(900px 600px at 90% 20%, rgba(34, 197, 94, 0.12), transparent 60%),
-          radial-gradient(900px 600px at 50% 120%, rgba(59, 130, 246, 0.14), transparent 60%),
-          linear-gradient(180deg, #0b1224 0%, #070b18 100%);
-      
-        background-repeat: no-repeat;      /* <- importante */
-        background-attachment: fixed;      /* <- “gruda” no viewport */
-        background-size: 1400px 900px, 1100px 700px, 1100px 700px, cover;
-        background-position: 10% 0%, 90% 20%, 50% 120%, center;
+
+        background-color: #111827;
       }
 
 
