Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Fluência em Inglês Sem Tradução Mental</h1>
-            <p class="subtitle">Fale com clareza, entenda em tempo real e pare de travar — do jeito certo</p>
+            <h1>Quem fala inglês joga outro jogo.</h1>
+            <p class="subtitle">Essa mentoria existe para te colocar nele — sem atalhos, sem ansiedade e sem estudar à toa.</p>
         </div>
     </header>
 
