--- a/index.html
+++ b/index.html
@@ -64,21 +64,27 @@
     }
 
     .whatsapp-button {
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      gap: 12px;
       padding: 16px 34px;
       font-size: 1rem;
       font-weight: 500;
-      color: var(--text);
+      color: #0b0b0c;
       text-decoration: none;
-      border: 1px solid rgba(255,255,255,0.15);
+      background-color: var(--accent);
       border-radius: 999px;
-      backdrop-filter: blur(6px);
       transition: all 0.2s ease;
     }
 
+    .whatsapp-button svg {
+      width: 20px;
+      height: 20px;
+      fill: currentColor;
+    }
+
     .whatsapp-button:hover {
-      background-color: rgba(255,255,255,0.06);
-      border-color: rgba(255,255,255,0.3);
+      filter: brightness(1.05);
       transform: translateY(-1px);
     }
   </style>
@@ -103,6 +109,12 @@
       href="https://wa.me/5515981298236?text=Ol%C3%A1%2C%20quero%20conhecer%20mais%20sobre%20a%20mentoria"
       target="_blank"
       rel="noopener noreferrer">
+
+      <!-- WhatsApp Icon -->
+      <svg viewBox="0 0 32 32" aria-hidden="true">
+        <path d="M19.11 17.2c-.29-.15-1.7-.84-1.97-.94-.27-.1-.46-.15-.66.15s-.76.94-.93 1.13c-.17.19-.34.22-.63.07-.29-.15-1.22-.45-2.33-1.43-.86-.77-1.44-1.72-1.61-2.01-.17-.29-.02-.45.13-.6.13-.13.29-.34.44-.51.15-.17.2-.29.29-.49.1-.2.05-.37-.02-.52-.07-.15-.66-1.59-.91-2.18-.24-.58-.49-.5-.66-.51-.17-.01-.37-.01-.56-.01s-.52.07-.79.37c-.27.29-1.04 1.02-1.04 2.49s1.06 2.89 1.2 3.09c.15.2 2.08 3.17 5.04 4.44.7.3 1.25.48 1.68.62.7.22 1.34.19 1.84.12.56-.08 1.7-.69 1.94-1.36.24-.66.24-1.23.17-1.36-.07-.13-.27-.2-.56-.34zM16 3C8.83 3 3 8.82 3 15.99c0 2.82.74 5.44 2.02 7.7L3 29l5.46-1.96A12.9 12.9 0 0 0 16 29c7.17 0 13-5.82 13-12.99C29 8.82 23.17 3 16 3z"/>
+      </svg>
+
       Conversar no WhatsApp
     </a>
   </div>
